# sbsync

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  initial_architecture.md  pyproject.toml  requirements.txt
client/: .env.example  .gitattributes  Dockerfile  docker-compose.yml  pyproject.toml
client/docker/: entrypoint.sh
client/md/: architecture.md  spec.md  usage.md
client/src/: __init__.py  config.py  git_handler.py  main.py  metrics.py  scheduler.py  utils.py
md/: architecture.md  spec.md  status.md  todo.md  usage.md
scripts/: docker_nuke.sh  install-cron.sh  watchdog-cron.sh
server/: Dockerfile  docker-compose.yml  pyproject.toml
server/docker/: entrypoint.sh
server/md/: architecture.md  rules.md  spec.md  status.md  usage.md
server/src/: config.py  git_handler.py  health.py  main.py  metrics.py  utils.py  watcher.py
server/tests/: test_health.py  test_main_health.py  test_periodic_sync.py  test_periodic_timer.py
src/: git_handler.py  main.py  utils.py  watcher.py
